This is the current version

--- a/lanenet.ipynb
+++ b/lanenet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;34mconfig\u001b[0m/            lanenet.ipynb      README.md\n",
-      "_config.yml        \u001b[01;34mlanenet_model\u001b[0m/     requirements.txt\n",
-      "\u001b[01;34mdata\u001b[0m/              LICENSE            \u001b[01;34msemantic_segmentation_zoo\u001b[0m/\n",
-      "\u001b[01;34mdata_provider\u001b[0m/     \u001b[01;34moutput\u001b[0m/            test_lanenet.py\n",
-      "\u001b[01;31mlanedetection.zip\u001b[0m  \u001b[01;34mpretrained_model\u001b[0m/  \u001b[01;34mtools\u001b[0m/\n"
+      "\u001b[0m\u001b[01;34mconfig\u001b[0m/                          LICENSE\n",
+      "_config.yml                      \u001b[01;34moutput\u001b[0m/\n",
+      "\u001b[01;34mdata\u001b[0m/                            \u001b[01;34mpretrained_model\u001b[0m/\n",
+      "\u001b[01;34mdata_provider\u001b[0m/                   README.md\n",
+      "evaluate_lanenet_on_tusimple.py  requirements.txt\n",
+      "evaluate_model_utils.py          \u001b[01;34msemantic_segmentation_zoo\u001b[0m/\n",
+      "generate_tusimple_dataset.py     test_lanenet.py\n",
+      "lanenet.ipynb                    \u001b[01;34mtools\u001b[0m/\n",
+      "\u001b[01;34mlanenet_model\u001b[0m/                   train_lanenet.py\n"
      ]
     }
    ],
@@ -35,7 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[01;32mplane.mp4\u001b[0m*     \u001b[01;34mtraining_data_example\u001b[0m/  \u001b[01;34mtusimple_test_image\u001b[0m/\n",
+      "\u001b[01;35msample.mp4\u001b[0m     \u001b[01;32mtravel1.mp4\u001b[0m*\n",
+      "\u001b[01;34msource_image\u001b[0m/  tusimple_ipm_remap.yml\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
